# draft

./: Cargo.toml  README.md  typos.toml
crates/draft-gfx-base/: Cargo.toml
crates/draft-gfx-base/src/: bind_group.rs  buffer.rs  color_target_state.rs  depth_stencil.rs  device.rs  lib.rs  pipeline_layout.rs  primitive_state.rs  sampler.rs  texture.rs  vertex_buffer_layout.rs
crates/draft-gfx-base/src/bind_group_layout/: entry.rs  mod.rs
crates/draft-gfx-base/src/bind_group_layout/entry/: builder.rs  mod.rs
crates/draft-gfx-base/src/common/: texture.rs
crates/draft-gfx-base/src/pipeline/: container.rs  mod.rs
crates/draft-render/: Cargo.toml
crates/draft-render/src/: error.rs  lib.rs  mesh.rs  phase.rs  scene_render_data.rs
crates/draft-render/src/common/: cache.rs  depth_stencil.rs  mod.rs  multisample_state.rs  primitive_state.rs  vertex_buffer_layout.rs
crates/draft-render/src/common/buffer/: mod.rs
crates/draft-render/src/frame_context/: camera.rs  mesh.rs  mod.rs  phase.rs
crates/draft-render/src/frame_context/phase/: mesh.rs  mod.rs
crates/draft-render/src/frame_graph/: device_pass.rs  mod.rs  resource_node.rs  resource_table.rs
crates/draft-render/src/frame_graph/common/: color_attachment.rs  depth_stencil_attachment.rs  mod.rs  render_pass.rs  render_pass_info.rs  texel_copy_texture_info.rs  texture_view.rs
crates/draft-render/src/frame_graph/context/: compute_pass_context.rs  encoder.rs  encoder_pass_context.rs  mod.rs  parameter.rs  render_pass_context.rs
crates/draft-render/src/frame_graph/graph/: mod.rs
crates/draft-render/src/frame_graph/pass/: mod.rs  parameter.rs  render_pass.rs  render_pass_builder.rs
crates/draft-render/src/frame_graph/render_context/: compute_pass_context.rs  encoder_pass_context.rs  mod.rs  parameter.rs  render_pass_context.rs
crates/draft-render/src/frame_graph/transient_resource/: buffer.rs  mod.rs  texture.rs
crates/draft-render/src/geometry/: buffer.rs  mod.rs  storage.rs  vertex.rs
crates/draft-render/src/gfx_base/: buffer.rs  color_target_state.rs  depth_stencil.rs  device.rs  mod.rs  multisample_state.rs  primitive_state.rs  sampler.rs  texture.rs  vertex_buffer_layout.rs
crates/draft-render/src/gfx_base/bind_group_layout/: entry.rs  mod.rs
crates/draft-render/src/gfx_base/pipeline/: mod.rs
crates/draft-render/src/gfx_base/pipeline_cache/: mod.rs
crates/draft-render/src/material/: mod.rs
crates/draft-render/src/material/storage/: layout_cache.rs  mod.rs
crates/draft-render/src/phase/: mesh.rs  mod.rs
crates/draft-render/src/pipeline_storage/: cache.rs  layout_cache.rs  mod.rs
crates/draft-render/src/render_pipeline/: mod.rs
crates/draft-render/src/render_resource/: mod.rs
crates/draft-render/src/render_resource/buffer/: mod.rs
crates/draft-render/src/render_resource/texture/: mod.rs
crates/draft-render/src/renderer/: mod.rs
crates/draft-render/src/renderer/pipeline/: mod.rs
crates/draft-render/src/resource/: mod.rs
crates/draft-render/src/resource/buffer/: mod.rs
crates/draft-render/src/texture/: mod.rs  storage.rs
crates/draft-render/src/utils/: cache.rs  mod.rs  named_value.rs  std_140.rs  uniform_buffer.rs
crates/draft-render/src/world/: buffer_allocator.rs  mod.rs  pipeline_descriptor_cache.rs  resource_key.rs  uniform.rs
crates/draft_app/: Cargo.toml
crates/draft_app/src/: app.rs  error.rs  executor.rs  graphics_context.rs  lib.rs  plugin.rs  plugin_group.rs  scene.rs  world.rs
crates/draft_app/src/app/: mod.rs  plugin.rs
crates/draft_app/src/graphics_context/: mod.rs  winit.rs
crates/draft_app/src/plugin/: group.rs  mod.rs
crates/draft_app/src/renderer/: mod.rs
crates/draft_app/src/scene/: mod.rs  node.rs
crates/draft_image/: Cargo.toml
crates/draft_image/src/: lib.rs  loader.rs
crates/draft_internal/: Cargo.toml
crates/draft_internal/src/: default_plugins.rs  lib.rs  prelude.rs
crates/draft_material/: Cargo.toml
crates/draft_material/src/: bind_group.rs  effect.rs  lib.rs  material.rs  pipeline.rs  shader.rs
crates/draft_material/src/bind_group/: bind_group_layout.rs  bind_group_layout_entries.rs  mod.rs
crates/draft_material/src/resource_binding/: mod.rs
crates/draft_render/: Cargo.toml
crates/draft_render/src/: error.rs  lib.rs  material.rs  render_data_bundle.rs  render_pipeline.rs  render_server.rs
crates/draft_render/src/frame_graph/: bind_group.rs  handle.rs  index.rs  mod.rs  pass_node.rs  pipeline_container.rs  resource_board.rs  resource_node.rs  resource_table.rs  texture_view.rs
crates/draft_render/src/material/: bind_group.rs  effect.rs  mod.rs
crates/draft_render/src/render_data_bundle/: mesh.rs  mod.rs  window.rs
crates/draft_render/src/render_frame/: mesh_material.rs  mod.rs  window.rs
crates/draft_render/src/render_phase/: mesh_material.rs  mod.rs
crates/draft_render/src/render_pipeline/: core_2d.rs  mod.rs
crates/draft_render/src/render_resource/: buffer.rs  buffer_allocator.rs  buffer_vec.rs  geometry_allocator.rs  gpu_array_buffer.rs  material_cache.rs  mesh_allocator.rs  mesh_cache.rs  mesh_material_cache.rs  mesh_material_pipeline.rs  mod.rs  pipeline_cache.rs  render_camera.rs  render_server.rs  specialized_mesh_pipeline.rs  temporary_cache.rs  texture_cache.rs  window_surface.rs  window_surface_texture.rs
crates/draft_render/src/render_server/: mod.rs  render_device.rs  winit.rs
crates/draft_render/src/render_world/: mesh_cache.rs  mod.rs  pipeline_cache.rs  render_window.rs  shader_cache.rs  temporary_cache.rs
crates/draft_render/src/renderer/: mesh_material.rs  mod.rs  render_world.rs
crates/draft_render_2d/: Cargo.toml
crates/draft_render_2d/src/: lib.rs
crates/draft_render_2d/src/resource/: mesh2d.wgsl  mod.rs
crates/draft_scene/: Cargo.toml
crates/draft_scene/src/: lib.rs
crates/draft_shader/: Cargo.toml
crates/draft_shader/src/: cache.rs  lib.rs  loader.rs
crates/draft_window/: Cargo.toml
crates/draft_window/src/: lib.rs  manager.rs  raw_handle.rs  windows.rs  winit.rs
crates/draft_winit/: Cargo.toml
crates/draft_winit/src/: lib.rs  state.rs  winit_windows.rs
(+182 files in other folders)
