[package]
name = "draft"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/draft_app",
    "crates/draft_arena",
    'crates/draft_core',
    "crates/draft_image",
    "crates/draft_render",
    "crates/draft_window",
]

[workspace.dependencies]
fyrox-resource = { git = "https://github.com/zuiyu1998/Fyrox.git" }

[dependencies]

draft_app = { path = "./crates/draft_app" }
draft_render = { path = "./crates/draft_render" }
