[package]
name = "draft"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/draft_app",
    "crates/draft_arena",
    'crates/draft_core', "crates/draft_graphics",
    "crates/draft_image",
    "crates/draft_render",
    "crates/draft_window",
]

[workspace.dependencies]
fyrox-resource = { git = "https://github.com/zuiyu1998/Fyrox.git" }
fyrox-core = { git = "https://github.com/zuiyu1998/Fyrox.git" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }

[dependencies]

draft_app = { path = "./crates/draft_app" }
draft_render = { path = "./crates/draft_render" }
