[package]
name = "draft"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    '.',
    "crates/draft_app",
    "crates/draft_graphics",
    "crates/draft_image",
    "crates/draft_internal",
    "crates/draft_material",
    "crates/draft_mesh",
    'crates/draft_render',
    "crates/draft_window",
    "crates/draft_winit",
]

[workspace.dependencies]
fyrox-core = { version = "1.0" }
fyrox-resource = { version = "1.0" }

[dependencies]
draft_internal = { path = "crates/draft_internal" }
