[package]
name = "draft-render"
version = "0.1.0"
edition = "2024"

[dependencies]
fyrox-core = { git = "https://github.com/zuiyu1998/Fyrox.git" }
fyrox-resource = { git = "https://github.com/zuiyu1998/Fyrox.git" }

naga = { version = "25.0", features = ["serialize", "deserialize"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.0"
thiserror = { version = "1.0" }
naga_oil = "0.17.1"
bytemuck = { version = "1.5" }
bitflags = { version = "2.9" }
tracing = { version = "0.1" }
wgpu = { version = "24", features = ["wgsl", "dx12", "metal", "naga-ir"] }
encase = { version = "0.10" }
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "png", "tga", "tiff", "bmp"] }
downcast-rs = "2.0.1"
fxhash = { version = "0.2"}
