[package]
name = "draft_app"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_material = { path = "../draft_material" }
draft_window = { path = "../draft_window" }
draft_render = { path = "../draft_render" }

fyrox-core = { workspace = true }
fyrox-resource = { workspace = true }

downcast-rs = { workspace = true }
variadics_please = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fxhash = { workspace = true }
