[package]
name = "draft_image"
version = "0.1.0"
edition = "2024"

[dependencies]
fyrox-resource = { workspace = true }
fyrox-core = { workspace = true }

draft_graphics = { path = "../draft_graphics"}

serde = { workspace = true }
thiserror = { workspace = true }
image = { version = "0.25.2", default-features = false }
bytemuck = { version = "1.5" }
