[package]
name = "draft_internal"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_app = { path = "../draft_app" }
draft_winit = { path = "../draft_winit" }
draft_render = { path = "../draft_render" }
draft_render_2d = { path = "../draft_render_2d" }
draft_scene = { path = "../draft_scene" }
