[package]
name = "draft_material"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_core = { path = "../draft_core" }
draft_image = { path = "../draft_image" }

fyrox-core = { workspace = true }
fyrox-resource = { workspace = true }
fyrox-math = { workspace = true }
draft_graphics = { path = "../draft_graphics" }
thiserror = { workspace = true }