[package]
name = "draft_render"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_window = { path = "../draft_window" }
draft_core = { path = "../draft_core" }
draft_image = { path = "../draft_image" }
draft_graphics = { path = "../draft_graphics" }
draft_mesh = { path = "../draft_mesh" }

fyrox-resource = { workspace = true }
fyrox-core = { workspace = true }
thiserror = { workspace = true }
wgpu = { version = "29", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
