[package]
name = "draft_render"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_window = { path = "../draft_window" }
draft_graphics = { path = "../draft_graphics" }
draft_mesh = { path = "../draft_mesh" }
draft_shader = { path = "../draft_shader" }

fyrox-resource = { workspace = true }

wgpu = { version = "29.0" }
thiserror = { version = "2.0" }
