[package]
name = "draft_render_2d"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_graphics = { path = "../draft_graphics" }
draft_shader = { path = "../draft_shader" }
draft_material = { path = "../draft_material" }
draft_render = { path = "../draft_render" }

fyrox-resource = { workspace = true }
fyrox-core = { workspace = true }
