[package]
name = "draft_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_render = { path = "../draft_render" }
draft_geometry = { path = "../draft_geometry" }
draft_material = { path = "../draft_material" }
draft_render_2d = { path = "../draft_render_2d" }

fyrox-resource = { workspace = true }
fyrox-core = { workspace = true }
