[package]
name = "draft_window"
version = "0.1.0"
edition = "2024"

[features]
default = ["winit"]

winit = ["dep:winit"]

[dependencies]
draft_core = { path = "../draft_core" }

downcast-rs = "2.0"
raw-window-handle = { version = "0.6", features = [
    "alloc",
], default-features = false }

winit = { version = "0.30", default-features = false, features = [
    "rwh_06",
], optional = true }
