[package]
name = "draft_winit"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_app = { path = "../draft_app" }
draft_window = { path = "../draft_window" }
draft_render= { path = "../draft_render" }

fyrox-core = { workspace = true }
bevy_platform = { workspace = true }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
log = { workspace = true, default-features = false }
