[package]
name = "draft_winit"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_app = { path = "../draft_app" }
draft_window = { path = "../draft_window" }
draft_render = { path = "../draft_render" }
draft_graphics = { path = "../draft_graphics" }

fyrox-core = { workspace = true }

winit = { version = "0.30" }
